[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
authors = [
  {name = "Adrian Dempwolff", email = "phyghtmap@aldw.de"},
  {name = "Aurélien Grenotton", email = "agrenott@gmail.com"},
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "bs4>=0.0.1",
  "colorlog>=6.7.0",
  "contourpy>=1.0.7",
  "lxml>=4.9.2",
  "matplotlib>=3.4.3",
  "numpy>=1.24.2",
  "nptyping>=2.5.0",
  "npyosmium>=3.6.1",
  "pybind11-rdp>=0.1.3",
  "scipy>=1.8.0",
  "shapely>=2.0.1",
]
description = "Creates OpenStreetMap suitable contour lines from NASA SRTM data"
dynamic = ["version"]
keywords = ["osm", "OpenStreetMap", "countour", "SRTM", "elevation"]
license = "GPL-2.0-or-later"
name = "pyhgtmap"
readme = "README.md"

[project.optional-dependencies]
geotiff = [
  # Do NOT pin GDAL version to ease installing it via OS package manager (due to many dependencies)
  "GDAL",
]

[project.scripts]
pyhgtmap = "pyhgtmap.main:main"

[project.urls]
repository = "https://github.com/agrenott/pyhgtmap"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = ["/pyhgtmap"]

[tool.hatch.envs.default]
# Use default env for all dev activities
dependencies = [
  "pytest~=7.2.1",
  "pytest-mpl~=0.16.1",
  "types-beautifulsoup4>=4",
  "coverage~=7.2.1",
  "black>=23.1.0",
  "mypy>=1.0.1",
  "mypy-extensions~=1.0.0",
  "ruff>=0.0.259",
]

[tool.hatch.envs.default.scripts]
all = ["style", "typing", "test_cov"]
fmt = [
  "black {args:pyhgtmap tests tools}",
  "ruff --fix {args:.}",
  "style",
]
style = [
  "ruff {args:.}",
  "black --check --diff {args:pyhgtmap tests tools}",
]
test = "pytest {args}"
test_cov = [
  "coverage run -m pytest --mpl",
  "coverage combine",
  "coverage report",
  "coverage xml",
]
typing = "mypy {args}"

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10"]

[tool.hatch.envs.geotiff]
# Env for optional geotiff dependencies
# To allow using system's GDAL, which is painful to install
system-packages = true

[tool.black]

[tool.isort]
atomic = true
known_first_party = ["pyhgtmap"]
line_length = 88
profile = "black"
skip_gitignore = true

[tool.mypy]
files = ["tests", "pyhgtmap", "tools"]
ignore_missing_imports = true
install_types = true
non_interactive = true
plugins = "numpy.typing.mypy_plugin"
